--- a/index.html
+++ b/index.html
@@ -339,8 +339,7 @@
         <!-- Section - Contact -->
         <section id="contact" class="section padding-v-60 min-fullheight">
 
-            <!-- BG Map -->
-            <div id="google-map" class="bg-image" data-latitude="13.0231643" data-longitude="77.6957578" data-style="light"></div>
+           
 
             <!-- Contact Box -->
             <div class="contact-box bg-secondary dark animated" data-animation="flipInY">
@@ -399,7 +398,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">
+                    <a href="#">
                         <span>Blog</span>
                     </a>
                 <li>
