--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <p>
                                 A Computer Engineering Student with  experience  in developing scalable
                                 applications
-                                on technologies like NodeJS(8.x), MongoDB(3.4+). Also solve 600+ competetaive coding problems.
+                                on technologies like NodeJS(8.x), MongoDB(3.4+), MySql. Also solve 600+ competetaive coding problems.
                             </p>
                         </div>
 
@@ -113,7 +113,7 @@
                             <!-- Skill -->
                             <div class="skill">
                                 <div class="progress progress-animated">
-                                    <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="65"
+                                    <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="70"
                                         aria-valuemin="0" aria-valuemax="100">
                                         <span></span>
                                     </div>
@@ -133,7 +133,7 @@
                             <!-- Skill -->
                             <div class="skill">
                                 <div class="progress progress-animated">
-                                    <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="90"
+                                    <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="85"
                                         aria-valuemin="0" aria-valuemax="100">
                                         <span></span>
                                     </div>
@@ -163,22 +163,22 @@
                             <!-- Skill -->
                             <div class="skill">
                                 <div class="progress progress-animated">
-                                    <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="65"
-                                        aria-valuemin="0" aria-valuemax="100">
-                                        <span></span>
-                                    </div>
-                                </div>
-                                <strong>AWS</strong>
-                            </div>
-                            <!-- Skill -->
-                            <div class="skill">
-                                <div class="progress progress-animated">
-                                    <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="30"
+                                    <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="70"
                                         aria-valuemin="0" aria-valuemax="100">
                                         <span></span>
                                     </div>
                                 </div>
                                 <strong>Operating System</strong>
+                            </div>
+                            <!-- Skill -->
+                            <div class="skill">
+                                <div class="progress progress-animated">
+                                    <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="50"
+                                        aria-valuemin="0" aria-valuemax="100">
+                                        <span></span>
+                                    </div>
+                                </div>
+                                <strong>AWS</strong>
                             </div>
                         </div>
 
