--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>Avinash Yadav</title>
     <meta name="title" content="Avinash Yadav - A Fullstack  Developer">
-    <meta name="description" content="I am proficient with NodeJS and love to disrupt things one bit at a time">
+    <meta name="description" content="I am interested in everything related to tech and love to disrupt things one bit at a time">
     
 
     <!-- Title -->
@@ -97,10 +97,7 @@
                                 <strong>About</strong> Me</h4>
                             <p class="lead">A  Computer Engineering Student ,who love to explore new technologies.</p>
                             <p>
-                                A Computer Engineering Student with  experience  in developing scalable
-                                applications
-                                on technologies like NodeJS(8.x), MongoDB(3.4+). Currently working on Power BI to transform raw data to
-                                valuable information for better future.
+                                A Computer Engineering Student with experience  in developing scalable applications, enthusiastic to learn new technologies (ML&AI). Currently working on Power BI to transform raw data into valuable information for a better future.
                             </p>
                         </div>
 
@@ -211,8 +208,8 @@
                                     <i class="fa fa-server"></i>
                                 </span>
                                 <div class="speciality-content">
-                                    <h5 class="margin-b-0">Server Side Deployments</h5>
-                                    <p class="speciaity-description">Full stack development using Nodejs</p>
+                                    <h5 class="margin-b-0">Data Analysis</h5>
+                                    <p class="speciaity-description">Love to change raw data into meaningful Information</p>
                                 </div>
                             </div>
                             <!-- Speciality -->
@@ -398,9 +395,9 @@
                             </div>
                             <div class="date">22 June, 2020</div>
                             <h1>
-                                <a href="#">Flight Price Prediction</a>
+                                <a href="##">Flight Price Prediction</a>
                             </h1>
-                            <p class="lead">An ML based model to predict flight fare</p>
+                            <p class="lead">An ML-based model to predict flight fare</p>
                             <p>To get an idea about possible fare this project can help a lot.
                             </p>
                             <a href="http://flight2020.herokuapp.com/" target="_blank" class="btn btn-primary btn-xs">
@@ -425,7 +422,7 @@
                                 </span>
                                 <span>
                                     <i class="fa fa-user"></i>
-                                    <a href="#">the_mood</a>
+                                    <a href="#">Ajay Negi</a>
                                 </span>
                                 <span>
                                     <i class="fa fa-tag"></i>
@@ -434,10 +431,10 @@
                             </div>
                             <div class="date">10 Sep, 2020</div>
                             <h1>
-                                <a href="#">Amazon Food Reviews</a>
+                                <a href="##">Amazon Food Reviews</a>
                             </h1>
                             <p class="lead">An nlp model to setimential analysis</p>
-                            <p>Many models are used for  analysis
+                            <p>With the perception of text/review we predicted the polarity of review.In this project I applied various algorithm such as KNN,Naive Bayes,Logistic Regression,Support Vector machine,Decision trees,Random forest 
                             </p>
                             <a href="wow.html" target="_blank" class="btn btn-primary btn-xs"> <!-- coming soon -->
                                 <span>Visit...</span>
@@ -458,7 +455,7 @@
                                 </span>
                                 <span>
                                     <i class="fa fa-user"></i>
-                                    <a href="#">Virat</a>
+                                    <a href="#">Ashok Nehra</a>
                                 </span>
                                 <span>
                                     <i class="fa fa-tag"></i>
@@ -467,10 +464,10 @@
                             </div>
                             <div class="date">15 July, 2020</div>
                             <h1>
-                                <a href="#">Ipl inning score prediction</a>
+                                <a href="##">Ipl Inning score prediction</a>
                             </h1>
                             <p class="lead">Real time score prediction</p>
-                            <p>A good source for fantay league.
+                            <p>A good source for the fantasy league..
                             </p>
                             <a href="http://ipl2007.herokuapp.com/" target="_blank" class="btn btn-primary btn-xs">
                                 <span>Visit...</span>
@@ -503,7 +500,7 @@
                             </div>
                             <div class="date">5 Nov, 2019</div>
                             <h1>
-                                <a href="#">Weather App to know current temperature</a>
+                                <a href="##">Weather App to know current temperature</a>
                             </h1>
                             <p class="lead">Weather api to fetch data about weather.</p>
                             <p>A web-based where users can type in a city name and get real-time curent tempperature 
@@ -540,10 +537,10 @@
                             </div>
                             <div class="date">5 Nov 2020</div>
                             <h1>
-                                <a href="#">Covid Analysis using Power BI</a>
+                                <a href="##">Covid Analysis using Power BI</a>
                             </h1>
                             <p class="lead">A detailed analysis of covid</p>
-                            <p>A dashboard shows full analysis of coid & its effects
+                            <p>A dashboard shows the full analysis of covid 19 &  daily world trends.
                             </p>
                             <a href="https://app.powerbi.com/reportEmbed?reportId=1efc4b06-ece6-4260-ae9c-ee6daf2c9809&autoAuth=true&ctid=6d28e4fb-9074-4a0b-a5b8-9a89f632cc60&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXNvdXRoLWVhc3QtYXNpYS1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldC8ifQ%3D%3D"  target="_blank" class="btn btn-primary btn-xs">
                                 <span>Visit...</span>
@@ -573,10 +570,10 @@
                             </div>
                             <div class="date">7 Oct 2020</div>
                             <h1>
-                                <a href="#">Face Mask Detetion</a>
+                                <a href="##">Face Mask Detection</a>
                             </h1>
                             <p class="lead">Face Mask Detection</p>
-                            <p>Per ea tibique fabellas electram. Ea aliquam corpora vis. Ne quot civibus atomorum quo.
+                            <p>It can be use in real-time applications which require face-mask detection for safety purposes due to the outbreak of Covid-19. This project can be integrated with embedded systems for application in airports, railway stations, offices, schools, and public places to ensure that public safety guidelines are followed.
                             </p>
                             <a href="wow.html" target="_blank" class="btn btn-primary btn-xs">
                                 <span>Visit...</span>
