--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             <div class="bg-video">
              <!--   <video class="bg-video__content" autoplay muted loop> -->
              		<video width="1920" height="1080" autoplay muted loop>
-                    <source src="assets/img/photos/r1.mp4" type="video/mp4">
+                    <source src="assets/img/photos/v1.mp4" type="video/mp4">
                     <source src="assets/img/photos/video.webm" type="video/webm"> Your browser is not supported to play the video
                 </video>
             </div>
